--- a/lol_champinfo/public/index.html
+++ b/lol_champinfo/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://w7.pngwing.com/pngs/526/998/png-transparent-league-of-legends-world-championship-computer-icons-video-game-league-of-legends-text-logo-video-game-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ChampInfo</title>
+    <title>Champs.Info</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
